trying to fix vh on higher z-index div

--- a/Style/_footer.scss
+++ b/Style/_footer.scss
@@ -87,7 +87,7 @@ footer{
 
     .black-contact-footer{
         background-color: #353535;
-        height: 40vw;
+        height: 90vh;
         width: 100vw;
         display: block;
         .black-contact-footer-wrapper{
