--- a/style.css
+++ b/style.css
@@ -694,7 +694,7 @@ footer .ProfileImg {
 }
 footer .black-contact-footer {
   background-color: #353535;
-  height: 40vw;
+  height: 90vh;
   width: 100vw;
   display: block;
 }
